--- a/APFTestingUI/Views/Candidate/EditPacker.cshtml
+++ b/APFTestingUI/Views/Candidate/EditPacker.cshtml
@@ -19,6 +19,7 @@
             @Html.EditorFor(model => model.FirstName)
             @*@Html.ValidationMessageFor(model => model.FirstName)*@
         </div>
+        <div class="clear"></div>
 
         <div class="editor-label">
             @Html.LabelFor(model => model.LastName) <em>*</em>
@@ -27,6 +28,7 @@
             @Html.EditorFor(model => model.LastName)
             @*@Html.ValidationMessageFor(model => model.LastName)*@
         </div>
+        <div class="clear"></div>
 
         <div class="editor-label">
             @Html.LabelFor(model => model.Mobile) <em>*</em>
@@ -35,6 +37,7 @@
             @Html.EditorFor(model => model.Mobile)
             @*@Html.ValidationMessageFor(model => model.Mobile)*@
         </div>
+        <div class="clear"></div>
 
         <div class="editor-label">
             @Html.LabelFor(model => model.APFNumber) <em>*</em>
@@ -43,6 +46,7 @@
             @Html.EditorFor(model => model.APFNumber)
             @*@Html.ValidationMessageFor(model => model.APFNumber)*@
         </div>
+        <div class="clear"></div>
 
         <p class="button-container">
             <input type="submit" value="Save" class="button-submit" />
