--- a/APFTestingUI/Views/Practical/PilotView.cshtml
+++ b/APFTestingUI/Views/Practical/PilotView.cshtml
@@ -15,8 +15,8 @@
     <thead>
         <tr>
             <th class="th-detail">Detail</th>
-                <th class="th-comments">Comments</th>
-                <th class="th-score">Score</th>
+            <th class="th-comments">Comments</th>
+            <th class="th-score">Score</th>
         </tr>
     </thead>
     <tbody>
@@ -24,9 +24,9 @@
     {
         <tr>
             <td class="td-detail">
-                <h3 class="title">@Html.EditorFor(model => task.Title)</h3>
-                <p class="description text-justify">@Html.EditorFor(model => task.Details)</p>
-                <p class="max-score">@Html.EditorFor(model => task.MaxScore) Points</p>
+                <h3 class="title">@task.Title</h3>
+                <p class="description text-justify">@task.Details</p>
+                <p class="max-score">@task.MaxScore</p>
             </td>
             <td class="td-comments text-justify">@task.Comment</td>
             <td class="td-score">@task.Score</td>
