Added home and cancel button to pages and bit of styling to pilot summary screen

--- a/APFTestingUI/Views/Candidate/CreatePacker.cshtml
+++ b/APFTestingUI/Views/Candidate/CreatePacker.cshtml
@@ -49,8 +49,11 @@
         <div class="clear"></div>
 
         <p class="button-container">
-            <input type="reset" value="Reset" class="form-reset" />
-            <input type="submit" value="Create" class="form-submit" />
+            <span class="home-button-span">@Html.ActionLink("Home", "Index", "Examiner", new {}, new { @class="examinerButton"})</span>
+            <span class="control-button-span">
+                <input type="reset" value="Reset" class="form-reset" />
+                <input type="submit" value="Create" class="form-submit" />
+            </span>
         </p>
     </fieldset>
 }
