--- a/APFTestingUI/Content/Site.css
+++ b/APFTestingUI/Content/Site.css
@@ -1177,6 +1177,7 @@ td
 {
     padding: 20px;
     font-style:italic;
+    font-size:medium;
     color:#aabbaa;
 }
 
@@ -1338,6 +1339,16 @@ input[type="radio"]:checked + .label-radio {
     margin-top: 1em;
 }
 
+.home-button-span
+{
+    float:left;
+}
+
+.control-button-span
+{
+    float:right;
+}
+
 .form-reset, .form-submit
 {
     width: 90px;
@@ -1429,10 +1440,11 @@ input[type='number']
     width:50%;
 }
 
-.td-detail .max-score, .td-score
+.td-detail .max-score, .summary-score
 {
     font-style: italic;
     color: #ff9;
+    font-size:medium;
 }
 
 #form-pilot-practical p.button-container
