--- a/APFTestingUI/Views/Practical/PackerView.cshtml
+++ b/APFTestingUI/Views/Practical/PackerView.cshtml
@@ -41,6 +41,9 @@
     </tbody>
 </table>
 
-<p>
-    @Html.ActionLink("Add", "PackerInput", new { examId = @Model.ExamId }, new { @class = "examinerButton" })
+<p style="padding-right:15px;">
+    <span class="home-button-span">@Html.ActionLink("Home", "Index", "Examiner", new {}, new { @class="examinerButton"})</span>
+    <span class="control-button-span">
+        @Html.ActionLink("Add", "PackerInput", new { examId = @Model.ExamId }, new { @class = "examinerButton" })
+    </span>
 </p>
