--- a/APFTestingUI/Views/Candidate/CreatePilot.cshtml
+++ b/APFTestingUI/Views/Candidate/CreatePilot.cshtml
@@ -12,7 +12,7 @@
 <p>Please fill in the fields below to create a new Pilot Candidate.<br />Asterisks (*) are placed next to required fields.</p>
 
 @using (Html.BeginForm()) {
-    @Html.ValidationSummary(false)
+    @Html.ValidationSummary(true)
 
     <fieldset>
         <legend>Create</legend>
