--- a/APFTestingUI/Views/Practical/PilotInput.cshtml
+++ b/APFTestingUI/Views/Practical/PilotInput.cshtml
@@ -42,7 +42,7 @@
     </table>
     
     <p class="button-container">
-        <input type="submit" value="Submit" class="examinerButton"/>
+        <input type="submit" value="Submit" class="form-submit"/>
     </p>
 }
 
