--- a/APFTestingUI/Views/Candidate/CreatePacker.cshtml
+++ b/APFTestingUI/Views/Candidate/CreatePacker.cshtml
@@ -7,7 +7,7 @@
 <h1>Create Packer</h1>
 <p>Please fill in the fields below to create a new Packer Candidate.<br />Asterisks (*) are placed next to required fields.</p>
 @using (Html.BeginForm()) {
-    @Html.ValidationSummary(false)
+    @Html.ValidationSummary(true)
 
     <fieldset>
         <legend>Create Packer</legend>
