--- a/APFTestingUI/Views/Candidate/EditPilot.cshtml
+++ b/APFTestingUI/Views/Candidate/EditPilot.cshtml
@@ -177,7 +177,7 @@
         <div class="clear"></div>
 
         <p class="button-container">
-            <input type="submit" value="Save" class="button-submit" />
+            <input type="submit" value="Save" class="form-submit" />
         </p>
     </fieldset>
 }
