--- a/APFTestingUI/Views/Practical/PackerEdit.cshtml
+++ b/APFTestingUI/Views/Practical/PackerEdit.cshtml
@@ -102,7 +102,7 @@
         <div class="clear"></div>
         
         <p class="button-container">
-            <input type="submit" value="Save" class="examinerButton form-submit" />
+            <input type="submit" value="Save" class="form-submit" />
         </p>
     </fieldset>
 }
