--- a/APFTestingUI/Views/Practical/PackerInput.cshtml
+++ b/APFTestingUI/Views/Practical/PackerInput.cshtml
@@ -101,7 +101,7 @@
         <div class="clear"></div>
 
         <p class="button-container">
-            <input type="submit" value="Create" class="examinerButton" />
+            <input type="submit" value="Create" class="form-submit" />
         </p>
     </fieldset>
 }
