styled candidate details page

--- a/APFTestingUI/Views/Candidate/ViewPacker.cshtml
+++ b/APFTestingUI/Views/Candidate/ViewPacker.cshtml
@@ -1,10 +1,10 @@
 ﻿@model APFTestingUI.Models.Candidate.ViewPacker
 
 @{
-    ViewBag.Title = "View - Packer";
+    ViewBag.Title = "Candidate Details";
 }
 
-<h1>View Packer</h1>
+<h1>Candidate Details</h1>
 <div class="candidate-view">
     <div class="display-label">
          @Html.DisplayNameFor(model => model.FirstName)
