--- a/APFTestingUI/Views/Candidate/ViewPilot.cshtml
+++ b/APFTestingUI/Views/Candidate/ViewPilot.cshtml
@@ -1,10 +1,10 @@
 ﻿@model APFTestingUI.Models.Candidate.ViewPilot
 
 @{
-    ViewBag.Title = "View Pilot";
+    ViewBag.Title = "Candidate Details";
 }
 <div class="candidate-view">
-<h1>View Pilot</h1>
+<h1>Candidate Details</h1>
     <div class="display-label">
          @Html.DisplayNameFor(model => model.FirstName)
     </div>
