--- a/APFTestingUI/Views/Candidate/CreatePacker.cshtml
+++ b/APFTestingUI/Views/Candidate/CreatePacker.cshtml
@@ -49,10 +49,10 @@
         <div class="clear"></div>
 
         <p class="button-container">
-            <span class="home-button-span">@Html.ActionLink("Home", "Index", "Examiner", new {}, new { @class="examinerButton"})</span>
+            <span class="home-button-span">@Html.ActionLink("Home", "Index", "Examiner", new {}, new { @class="examiner-button"})</span>
             <span class="control-button-span">
-                <input type="reset" value="Reset" class="form-reset" />
-                <input type="submit" value="Create" class="form-submit" />
+                <input type="reset" value="Reset" class="form-button" />
+                <input type="submit" value="Create" class="form-button" />
             </span>
         </p>
     </fieldset>
