--- a/APFTestingUI/Views/Candidate/ViewPilot.cshtml
+++ b/APFTestingUI/Views/Candidate/ViewPilot.cshtml
@@ -142,6 +142,6 @@
     </div>
     <div class="clear"></div>
 <p class="button-container">
-    @Html.ActionLink("Edit", "EditPilot", new { candidateId = Model.Id }, new { @class="form-submit" })
+    @Html.ActionLink("Edit", "EditPilot", new { candidateId = Model.Id }, new { @class="form-button" })
 </p>
 </div>
