--- a/APFTestingUI/Views/Candidate/EditPacker.cshtml
+++ b/APFTestingUI/Views/Candidate/EditPacker.cshtml
@@ -49,7 +49,7 @@
         <div class="clear"></div>
 
         <p class="button-container">
-            <input type="submit" value="Save" class="form-submit" />
+            <input type="submit" value="Save" class="form-button" />
         </p>
     </fieldset>
 }
