some more styling

--- a/APFTestingUI/Views/Candidate/ViewPilot.cshtml
+++ b/APFTestingUI/Views/Candidate/ViewPilot.cshtml
@@ -4,7 +4,7 @@
     ViewBag.Title = "Candidate Details";
 }
 <div class="candidate-view">
-<h1>Candidate Details</h1>
+<h1 class="candidate-heading">Candidate Details</h1>
     <div class="display-label">
          @Html.DisplayNameFor(model => model.FirstName)
     </div>
