--- a/APFTestingUI/Content/Site.css
+++ b/APFTestingUI/Content/Site.css
@@ -1358,6 +1358,13 @@ input[type="radio"]:checked + .label-radio {
 
 
 /** Candidate Create Form */
+.candidate-heading
+{
+    font-size: 2.5em;
+    font-weight: bold;
+    color: #999999;
+}
+
 .editor-label
 {
     float:left;
