--- a/APFTestingUI/Views/Candidate/ViewPacker.cshtml
+++ b/APFTestingUI/Views/Candidate/ViewPacker.cshtml
@@ -4,7 +4,7 @@
     ViewBag.Title = "Candidate Details";
 }
 
-<h1>Candidate Details</h1>
+<h1 class="candidate-heading">Candidate Details</h1>
 <div class="candidate-view">
     <div class="display-label">
          @Html.DisplayNameFor(model => model.FirstName)
