--- a/APFTestingUI/Views/Exam/Result.cshtml
+++ b/APFTestingUI/Views/Exam/Result.cshtml
@@ -55,4 +55,4 @@
     <hr />
 }
 
-<p>@Html.ActionLink("Home", "Index", "Examiner", new {}, new { @class="button", id="result-home"})</p>
+<p>@Html.ActionLink("Home", "Index", "Examiner", new {}, new { @class="examiner-button", id="result-home"})</p>
