--- a/APFTestingUI/Views/Shared/_Layout.cshtml
+++ b/APFTestingUI/Views/Shared/_Layout.cshtml
@@ -27,8 +27,7 @@
                 <div class="right">
                     <div id="login-area">
                         <ul>
-                            <li><a id="login-admin" href="#">Admin Login</a></li>
-                            <li><a id="login-examiner" href="#">Examiner Login</a></li>
+                            <li><a id="logout" href="#">Logout</a></li>
                         </ul>
                     </div>
                 </div>
