--- a/APFTestingUI/Views/Exam/Start.cshtml
+++ b/APFTestingUI/Views/Exam/Start.cshtml
@@ -6,7 +6,7 @@
 }
 
 
-<div id="ExamContainer">
+<div id="exam-container">
     
     <h1>Instructions</h1>
 
@@ -20,8 +20,8 @@
         {
             <li>You will have a time limit of @Model.TimeLimit minutes to complete the exam.</li>
         }
-        <li>You will need a score of @Model.PassMark % in order to pass.</li>
-        <li>Each question has only one correct answer <strong><em>UNLESS</em></strong> stated otherwise in the question.</li>
+        <li>You will need a score of @Model.PassMark% in order to pass.</li>
+        <li>Each question has only one correct answer <strong>UNLESS</strong> stated otherwise in the question.</li>
         <li>You can mark questions for review and return to them later.</li>
         <li>Once all questions have been answered a summary page will be displayed. From here you can go back to any question, and marked questions will be highlighted.</li>
         <li>Good luck!</li>
@@ -30,6 +30,5 @@
     <p>@Html.ActionLink("Start Exam", "FirstQuestion", new { examId = Model.ExamId }, new { @class = "button"})</p>
 
     <br />
-    <p><strong style="color:red;">Remove</strong> @Html.ActionLink("Exam Summary", "Summary", new { examId = @ViewBag.ExamId }) @Html.ActionLink("Exam Result", "Result", new { examId = @ViewBag.ExamId })</p>
 
 </div>
